--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ repository = "https://github.com/Adancurusul/ad7124-rs"
 
 [dependencies]
 defmt = "0.3"
-embedded-hal = { version = "1.0.0", optional = true }
-embedded-hal-async = { version = "1.0.0", optional = true }
+embedded-hal = { version = "1.0.0" }
+embedded-hal-async = { version = "1.0.0" }
 
-[features]
